--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-date-value-accessor": "0.0.2",
     "core-js": "^2.5.4",
     "ng2-semantic-ui": "^0.9.7",
     "rxjs": "^6.0.0",
